Fixed the bug where $ was not showing up for new rows

--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -47,7 +47,7 @@ footer {
 }
 
 #item-table input.small.input-with-dollar {
-  width: 72px;
+  width: 59px;
 }
 
 #item-table input.input-with-dollar {
